Edited Guest to Away

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             
             <div class="column">    
-                <h3 class="team">GUEST</h3>
+                <h3 class="team">AWAY</h3>
                 <h2 class="score" id="guestScore"> 0 </h2>
                 <div>
                     <button onclick="addOneToGuest()"> +1 </button>
